[tool.poetry]
package-mode = false

[project]
name = "networking-troubleshooter-agent"
version = "0.1.0"
description = "AI-powered agent for DNS, SSL, HTTP, Ping, and GeoIP diagnostics."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "ping3>=5.1.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
]